# monitor

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
candid/: monitor.did
frontend/monitor/: index.js  monitor.did.d.ts  monitor.did.js
scripts/: build.sh  generate.sh
src/dashboard/: package-lock.json  package.json  svelte.config.js  vite.config.ts
src/dashboard/src/: app.html
src/dashboard/src/lib/api/: monitor.api.ts  proxy.declaration.ts  reward.declaration.ts
src/dashboard/src/lib/declarations/: index.d.ts  index.js  monitor.did  monitor.did.d.ts  monitor.did.js
src/dashboard/src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/monitor/: Cargo.toml
src/monitor/src/: api.rs  child.rs  default.rs  ledger.rs  lib.rs  log.rs  methods.rs  principals.rs  proxy.rs  queries.rs  run.rs  sns.rs  sort.rs  stable_store.rs  store.rs  system.rs  token_canister.rs  utils.rs
src/monitor/src/canisters/: cmc.rs  ledger.rs  mod.rs  proxy.rs  rewards.rs  token_canister.rs
src/monitor/src/operations/: charge.rs  child.rs  cmc.rs  frontend.rs  ledger.rs  mod.rs  read.rs  readv2.rs  siwe.rs
src/monitor/src/operations/canisters/: dashboard.rs  mod.rs  siws.rs  sns.rs
src/monitor/src/queries/: cycle_history.rs  icp_history.rs  mod.rs  sort.rs  sortv2.rs
src/monitor/src/stores/: mod.rs  stable_models.rs  stable_models_v2.rs  stable_store.rs  store.rs  types.rs
src/monitor/src/utils/: auth.rs  canister_status.rs  cycle_history.rs  icp_history.rs  log.rs  mod.rs  sort.rs
wasm/: monitor.wasm
(+34 files in other folders)
