[package]
name = "monitor"
version = "2.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

# [[test]]
# name = "generate"
# path = "src/lib.rs"

[dependencies]
candid = "^0.9.6"
ic-cdk = "^0.11.4"
ic-cdk-macros = "0.8.1"
ic-cdk-timers = "^0.5.1"
ic-stable-structures = "0.6.1"
ic-ledger-types = "0.8.0"
serde = "1.0.193"
serde_bytes = "0.11.12"
time = { version = "0.3.30", features = ["formatting"] }
num-bigint = "0.4.4"
num-traits = "0.2.17"

ic_scalable_misc = "1.0.1-beta.2"
